streetart/static/streetart/css/style.css
/* ... */
@media screen and (max-width: 991px) {

    .selector-input {
        bottom: 75px;
        left: 17px;
        
    }

    .selector-input .text {
        display: none;
    }

    #status-1 + label {
        background: url(../../img/visible.png) 0px 5px no-repeat;
        background-size: 21px 30px;
        height: 40px;
        padding: 0 0 0 20px;
    }
    
    #status-2 + label {
        background: url(../../img/part_visible.png) 0px 5px no-repeat;
        background-size: 21px 30px;
        height: 40px;
        padding: 0 0 0 20px;
    }
    
    #status-3 + label {
        background: url(../../img/not_visible.png) 0px 5px no-repeat;
        background-size: 21px 30px;
        height: 40px;
        padding: 0 0 0 20px;
    }
}

/*** Form buttons ***/
.form-group .btn{
    width: 100%;
    max-width: 150px;
}

.form-group .btn-primary{
    background-color: #ffe000;
    border-color: rgb(179, 176, 4);
    color: black;
}

.form-group .btn-primary:hover{
    background-color: #d6d10b;
}



.filter-block {
    position: absolute;
    top: 6px;
    z-index: 1;
}

/**** Left Panel ****/

.left-panel {
    padding: 0;
    background-color: transparent;
    height: inherit;
    display: flex;
    min-height: 100%;
    flex-direction: column;
}


@media screen and (max-width: 991px) {
  .left-panel {
    border-right: none;
    background-color: black;
  }
}

.title-block {
    margin-top: 15px;
    margin-bottom: 15px;
    width: 100%;
    display: block;
}

.back-block {
    display: none;
    position: fixed;
    z-index: 1001;
    background-color: #ffe000;
    color: black;
    border-radius: 10px;
    padding-left: 20px;
    left: -20px;

}

.back-button-block {
    font-size: 3em;
    text-align: center;
    display: inline-block;
}
.back-span {
    display: inline-block;
}
.back-icon {
  float: left;
}

.placeholder-image {
    height: 15%;
    display: block;
    margin: auto;
}

#lightboxOverlay {
    will-change: opacity;
}


@media screen and (max-width: 991px) {
    .mobile-hide {
        display: none;
    }
}

/*** Cards ***/

.card-holder {
    display: none;
    width: 100%;
    margin-top: 48px;
}

.card {
    background-color: transparent;
    margin: 10px;
    border-radius: 2px;
    text-align: center;
}

.main-image{
    max-height: 400px;
}

.alt-images-holder{
    margin-top: 0px;
    opacity: 0.7;
}

#comment-card-holder.card-holder {
    margin-top: 0px;
}

.card .card-image {
  position: relative;
  overflow: hidden;
  display: inline-block;
  margin: 0 auto;
}

.card-image-link{
    margin: 0 auto;
    display: inline-block;
    text-align: center;
}

.card .card-image img {
    border-radius: 2px 2px 0 0;
    background-clip: padding-box;
    position: relative;
    object-fit: contain;
    /*-webkit-transition: height 0.5s ease;
    -moz-transition: height 0.5s ease;
    -o-transition: height 0.5s ease;
    transition: height 0.5s ease;*/
    display: inline-block;
}

.card-image .overlay-fullscreen {
    position: absolute;
    padding: 5px;
    line-height: 1em;
    top: 0;
    right: 0;
}

.card-image .overlay-expand {
    position: absolute;
    padding: 5px;
    line-height: 1em;
    bottom: 0;
    left: 0;
}

.card-image .overlay-like {
    position: absolute;
    padding: 5px;
    margin-right: 36px;
    line-height: 1em;
    bottom: 0;
    right: 0;
}

.card-image .overlay-checkin {
    position: absolute;
    padding: 5px;
    line-height: 1em;
    bottom: 0;
    right: 0;
}

.card-image .overlay-action{
    position: absolute;
    bottom: 0;
    right: 0;
    background-color: rgba(0, 0, 0, 0.63);
    border-radius: 3px;
    margin: 2px;
    padding: 2px 6px;
}

.card-image .overlay-action > span{
    padding: 2px;
    color: white;
}

.card-image.main-card-image {
    margin-left: 10px;
    margin-right: 10px;
    box-shadow: 0px 5px 20px black;
    border-radius: 3px;
}

.card .card-details {
    display: none;
    background-color: transparent;
    text-align: center;
    color: white;
}

.card span.artwork-title {
    line-height: 32px;
    font-size: 18px;
    font-weight: 300;
}

.card span.artwork-artists {
    line-height: 32px;
    font-size: 24px;
    font-weight: 300;
    padding-bottom: 12px;
}

.card span[class*="-title"] {
    line-height: 32px;
    font-weight: 300;
    padding-bottom: 12px;
}

.card .card-content {
  padding: 16px;
  border-radius: 0 0 2px 2px;
  background-clip: padding-box;
  box-sizing: border-box;
}

.card .card-content p {
  margin: 0;
  color: inherit;
}

.card .card-content .value-title {
    font-weight: bold;
    text-transform: capitalize;
}

.card-content hr {
    border-top: 1px solid rgba(160, 160, 160, 0.2);
}

.card .card-action {
  border-bottom: 1px solid rgba(160, 160, 160, 0.2);
  padding: 16px;
}

.card .card-action a {
  float: left;
  height: 36px;
  min-width: 110px;
}

.card-action-button{
    display: inline-block;
    padding: 5px 5px;
}


.card-action-button > a > span{
    font-size: 17px;
    color: white;
}

.card-action-button > a > span > i{
    padding: 3px 8px;
    font-size: 22px;
}

.card .like-checkin-count {
  border-top: 1px solid rgba(160, 160, 160, 0.2);
  padding: 5px;
  padding-left: 16px;
}

.comments-header {
    display: inline-block;
    text-align: center;
    color: white;
}

.comments-header > p {
    font-size: 20px;
}


.nearest-artworks-header {
    display: inline-block;
    border-bottom: 1px solid rgba(160, 160, 160, 0.2);
    text-align: center;
    margin: 10px;
    color: white;
}

.nearest-artworks-header > p {
    font-size: 20px;
}


/*** Logo Page ***/

.logo-container {
  text-align: center;
}

@media screen and (max-width: 767px) {
  .logo-container {
    margin-left: 20px;
    margin-right: 20px;
  }
}

.logo-card {
  display: inline-block;
}

.logo-image {
  max-height: 300px;
}

.logo-header {
  text-align: center;
}

.logo-intro {
  text-align: justify;
}
/* ... */

